--- a/.github/workflows/android-master.yml
+++ b/.github/workflows/android-master.yml
@@ -25,6 +25,6 @@ jobs:
           key: ${{ runner.os }}-build-${{ env.gradle-cache-key }}-${{ hashFiles('android/buildSrc/**') }}
           restore-keys: ${{ runner.os }}-build-${{ env.gradle-cache-key }}
       - name: Applyng Api key
-        run: ./config/createKey.sh ${{ secrets.API_KEY }}
+        run: sudo ./config/createKey.sh ${{ secrets.API_KEY }}
       - name: Run checks
-        run: sudo bash ./gradlew project_check
+        run: bash ./gradlew project_check
