Fixed CI workflow

--- a/.github/workflows/android-master.yml
+++ b/.github/workflows/android-master.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Applyng Api key
         run: ./config/createKey.sh ${{ secrets.API_KEY }}
       - name: Run checks
-        run: bash ./gradlew project_check
+        run: bash ./gradlew clean build
