--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,50 +1,26 @@
 import com.marvel.app.Dependencies
 
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply from: "$rootDir/common-android-module.gradle"
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'androidx.navigation.safeargs'
 
-def apiKeyPropertiesFile = rootProject.file("key.properties")
+def apiKeyPropertiesFile = rootProject.file("keys.properties")
 def apiKeyProperties = new Properties()
 apiKeyProperties.load(new FileInputStream(apiKeyPropertiesFile))
 
 android {
-    compileSdkVersion Dependencies.Versions.compileSdk
-    buildToolsVersion Dependencies.Versions.buildTools
-
     defaultConfig {
         applicationId Dependencies.Application.id
-        minSdkVersion Dependencies.Versions.minSdk
-        targetSdkVersion Dependencies.Versions.targetSdk
-        versionCode Dependencies.Releases.versionCode
-        versionName Dependencies.Releases.versionName
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        buildConfigField "String", "API_KEY", apiKeyProperties['API_KEY']
+        buildConfigField "String", "PUBLIC_KEY", apiKeyProperties['PUBLIC_KEY']
+        buildConfigField "String", "PRIVATE_KEY", apiKeyProperties['PRIVATE_KEY']
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    testOptions {
-        unitTests {
-            includeAndroidResources = true
+            shrinkResources true
         }
     }
 }
@@ -54,8 +30,6 @@ kapt {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-
     implementation Dependencies.AndroidxLibraries.core
     implementation Dependencies.AndroidxLibraries.appCompat
     implementation Dependencies.AndroidxLibraries.constraintLayout
@@ -84,6 +58,7 @@ dependencies {
     testImplementation Dependencies.TestLibraries.archCoreTesting
     testImplementation Dependencies.TestLibraries.paging
     testImplementation Dependencies.TestLibraries.hilt
+    testImplementation Dependencies.TestLibraries.mockk
     kaptTest Dependencies.TestLibraries.hiltCompiler
     testImplementation Dependencies.TestLibraries.coroutines
     testImplementation Dependencies.TestLibraries.testRules
