--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -145,7 +145,7 @@ empty-blocks:
   EmptyForBlock:
     active: true
   EmptyFunctionBlock:
-    active: true
+    active: false
     ignoreOverridden: false
   EmptyIfBlock:
     active: true
